[package]
name = "rs-pider"
version = "0.1.0"
authors = ["Brady McDonough"]

[dependencies]
reqwest = "0.8.6"
robotparser = { version = "0.10.1", features = [ "http" ] }
url = "1.7.0"
##xml-rs = "0.8.0"
sitemap = "0.3.0"
base_url = { version = "^0.0.8", features = [ "sitemap_conversion", "robot_conversion" ] }