[package]
name = "rs_pider"
version = "0.1.0"
authors = ["Brady McDonough"]

[dependencies]
reqwest = "^0.9"
url = "1.7.0"
##xml-rs = "0.8.0"
sitemap = "0.3.0"
try_from = "0.2.2"

[dependencies.rs-pider-robots]
path="../rs-pider-robots/"
version = "0.1.0"

[dependencies.base_url]
version = "^0.0.8"
features = [ "sitemap_conversion", "robot_conversion" ]